# warehouse_management

./: README.md
barcode-scan-flask/python-microservice/: .env.example  app.py  pyproject.toml
barcode-scan-flask/python-microservice/flaskr/: __init__.py  blueprint.py
barcode-scan-flask/python-microservice/schema/: warehouse_mgt.sql
dashboard-visuals/inventory-dashboard/: package-lock.json  package.json
dashboard-visuals/inventory-dashboard/src/app/: page.js
dashboard-visuals/inventory-dashboard/src/app/components/: AnomalyChart.jsx  InventoryTable.jsx  RFIDLogsChart.jsx  RFIDLogsTable.jsx  TopSellingPieChart.jsx
inventory-backend-laravel/backend/routes/: api.php
